--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-domain: example.com
-url: https://example.com
+domain: audreyeiley.github.io
+url: https://audreyeiley.github.io/
 baseurl: ""
 
 title: Eiley
-email: wind@example.com
+email: eileywoo.yiss@gmail.com
 author: Eiley
 
 lang: en
@@ -16,6 +16,6 @@ color: "#13ccf9"
 #   shortname: example-com
 #
 rrss:
-  email: "example@example.cl"
-  telegram: "https://t.me/"
-  discord: "https://discord.com/"
+  email: "eileywoo.yiss@gmail.com"
+  # telegram: "https://t.me/"
+  # discord: "https://discord.com/"
